# espurna-nightly-builder

./: .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  Dockerfile  README.md  build.sh  commit.txt  pio-2cpu  prepare.py  prepare_env.py  rename_app_revision.sh  setup.cfg  setup.py  yml_jobs_generator.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql-analysis.yml  lint.yml  nightly.yml  prepare.yml  testing.yml
.travis/: build  prepare.py
espurna_dev_builder/: __init__.py  __main__.py  api.py  errors.py  mkenv.py  prepare.py  rename_releases.py  setup_repo.py
espurna_nightly_builder/: __init__.py  __main__.py  api.py  errors.py  mkenv.py  prepare.py  rename_releases.py  setup_repo.py  util.py
tests/: test_rename_releases.py
