[metadata]
name = espurna_nightly_builder
url = https://github.com/mcspr/espurna-nightly-builder
version = attr: espurna_nightly_builder.__version__
description = ESPurna nightly builder
author = Prokhorov Maxim
author_email = prokhorov.max@outlook.com
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools

[options]
packages = find:
install_requires =
    requests>=2.4.0,<3
python_requires = >=3.7

[options.entry_points]
console_scripts =
    espurna_nightly = espurna_nightly_builder.__main__:main
